<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lavender"
    tools:context=".MainActivity">

    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/gridlt"
        android:layout_width="379dp"
        android:layout_height="377dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="50dp"
        android:background="@drawable/gr"
        app:columnCount="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.551"
        app:rowCount="3">

        <ImageView
            android:id="@+id/img1"
            android:layout_width="97dp"
            android:layout_height="102dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/content_desc_ball1img"
            android:onClick="playerTap"
            android:tag="0"
            app:layout_column="0"
            app:layout_row="0"
            app:srcCompat="@drawable/white_box" />

        <ImageView
            android:id="@+id/img2"
            android:layout_width="93dp"
            android:layout_height="102dp"
            android:layout_margin="17dp"
            android:contentDescription="@string/content_desc_ball2img"
            android:onClick="playerTap"
            android:tag="1"
            app:layout_column="1"
            app:layout_row="0"
            app:srcCompat="@drawable/white_box" />

        <ImageView
            android:id="@+id/img3"
            android:layout_width="94dp"
            android:layout_height="102dp"
            android:layout_margin="15dp"
            android:contentDescription="@string/content_desc_ball3img"
            android:onClick="playerTap"
            android:tag="2"
            app:layout_column="2"
            app:layout_row="0"
            app:srcCompat="@drawable/white_box" />

        <ImageView
            android:id="@+id/img4"
            android:layout_width="98dp"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/content_desc_ball4img"
            android:onClick="playerTap"
            android:tag="3"
            app:layout_column="0"
            app:layout_row="1"
            app:srcCompat="@drawable/white_box" />

        <ImageView
            android:id="@+id/img5"
            android:layout_width="94dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/content_desc_ball5img"
            android:onClick="playerTap"
            android:tag="4"
            app:layout_column="1"
            app:layout_row="1"
            app:srcCompat="@drawable/white_box" />

        <ImageView
            android:id="@+id/img6"
            android:layout_width="94dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/content_desc_ball6img"
            android:onClick="playerTap"
            android:tag="5"
            app:layout_column="2"
            app:layout_row="1"
            app:srcCompat="@drawable/white_box" />

        <ImageView
            android:id="@+id/img7"
            android:layout_width="94dp"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            android:layout_marginTop="3dp"
            android:contentDescription="@string/content_desc_ball7img"
            android:onClick="playerTap"
            android:tag="6"
            app:layout_column="0"
            app:layout_row="2"
            app:srcCompat="@drawable/white_box" />

        <ImageView
            android:id="@+id/img8"
            android:layout_width="94dp"
            android:layout_height="100dp"
            android:layout_margin="16dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/content_desc_ball8img"
            android:onClick="playerTap"
            android:tag="7"
            app:layout_column="1"
            app:layout_row="2"
            app:srcCompat="@drawable/white_box" />

        <ImageView
            android:id="@+id/img9"
            android:layout_width="90dp"
            android:layout_height="100dp"
            android:layout_margin="10dp"
            android:layout_marginTop="2dp"
            android:contentDescription="@string/content_desc_ball9img"
            android:onClick="playerTap"
            android:tag="8"
            app:layout_column="2"
            app:layout_row="2"
            app:srcCompat="@drawable/white_box" />



    </androidx.gridlayout.widget.GridLayout>


    <TextView
        android:id="@+id/restart"
        android:layout_width="176dp"
        android:layout_height="62dp"
        android:layout_marginStart="95dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"
        android:background="@color/lavender"
        android:fontFamily="cursive"
        android:onClick="playerTap"
        android:text=" Restart"
        android:textAlignment="center"
        android:textColor="#3C1143"
        android:textSize="48sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gridlt" />

    <ImageView
        android:id="@+id/line1"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="190dp"
        android:src="@drawable/horizontal_line"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/line2"
        android:layout_width="match_parent"
        android:layout_height="15dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="310dp"
        android:src="@drawable/horizontal_line"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:layout_marginTop="435dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="40dp"
        android:src="@drawable/horizontal_line"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/line4"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/vertical_line"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/line5"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/vertical_line"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/line6"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:src="@drawable/vertical_line"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dig1"
        android:layout_width="match_parent"
        android:layout_height="307dp"
        android:layout_marginTop="160dp"
        android:src="@drawable/dig_1"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/dig2"
        android:layout_width="match_parent"
        android:layout_height="307dp"
        android:layout_alignBottom="@+id/gridlt"
        android:layout_marginTop="170dp"
        android:src="@drawable/dig_2"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>